# pingpath

./: .gitignore  CONTRIBUTING.md  README.md  compose.dev.yml
backend/: Cargo.toml
backend/client-api/: Cargo.toml
backend/client-api/src/: auth.rs  locations.rs  main.rs  profile.rs
backend/model/: Cargo.toml
backend/model/src/: database.rs  datetime.rs  lib.rs  location.rs  session.rs  user.rs
backend/model/src/datetime/: de.rs  se.rs
backend/model/src/location/: addr.rs
backend/model/src/user/: github.rs  profile.rs
backend/src/: auth.rs  main.rs  profile.rs
docker/: Caddyfile.dev  Dockerfile.api.dev  Dockerfile.database.dev  Dockerfile.proxy.dev
docs/: api.md
docs/api/: api.json  index.html
frontend/: .prettierrc  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: main.css  main.ts
frontend/src/components/: Button.vue  Counter.vue  HStack.vue  Input.vue  Link.vue  Nav.vue  NavPanel.vue  Text.vue
frontend/src/components/history/: HistoryItem.vue
frontend/src/components/location/: LocationItem.vue
frontend/src/components/map/: Map.vue  MessagePopup.vue  index.js
frontend/src/components/notifications/: Notification.vue
frontend/src/components/svg/: AssignmentLate.vue  Check.vue  ConnectionBar.vue  GitHub.vue  Logo.vue  TempProfile.vue  Warning.vue
frontend/src/composables/: useMap.ts  useNotifications.ts
frontend/src/pages/: index.vue  notFound.vue  pricing.vue  profile.vue
migrations/: 0_initial.sql  migration.sh
